--- a/themes/tree/pages/home.htm
+++ b/themes/tree/pages/home.htm
@@ -99,11 +99,11 @@ is_hidden = 0
             <img  data-src="./storage/app/media/dinning.jpg" uk-img alt="">
         </div>
         <div class="uk-flex-left uk-flex-first@s">
-            <a href="{{'accommodation'|page}}" class="uk-icon-link">
-                <h3 class="uk-txt-bold uk-heading uk-heading-small">Dinning</h3>
+            <a href="{{'dining'|page}}" class="uk-icon-link">
+                <h3 class="uk-txt-bold uk-heading uk-heading-small">Dining</h3>
             </a>
             <p class="uk-text-small" style="color:black">As far as dorms go this is one of the best I ever stayed. The beds are in a kind of bungalow style house with lots of fresh air. You can hear the ocean from your bunk. The matress is super comfortable and the lower beds have curtains. The whole place is full of plants and flowers - nice to sit and read in the garden if you want to chill</p>
-            <a href="{{'dinning'|page}}" class="uk-icon-link"><span style="color:black;" uk-icon="icon:arrow-right; ratio:2.5"></span>
+            <a href="{{'dining'|page}}" class="uk-icon-link"><span style="color:black;" uk-icon="icon:arrow-right; ratio:2.5"></span>
             </a>
         </div>
     </div>
