--- a/themes/tree/pages/home.htm
+++ b/themes/tree/pages/home.htm
@@ -12,7 +12,7 @@ is_hidden = 0
 
 <!-- main image -->
 
-<div class="main-image uk-background-cover uk-flex uk-flex-center uk-background-primary"  style=" height:540px" alt="" data-src="./storage/app/media/coconut-nice.jpg" uk-img>
+<div class="main-image uk-background-cover uk-flex uk-flex-center uk-background-primary"  alt="" data-src="./storage/app/media/coconut-nice.jpg" uk-img>
         <div class="uk-width-1-1" style="color:black;">
             <h1 class="uk-text-center uk-heading uk-position-large uk-position-center">
                 Under The <span style="font-weight: bold;">Coconut Tree</span>
