--- a/themes/tree/pages/accommodation.htm
+++ b/themes/tree/pages/accommodation.htm
@@ -62,7 +62,7 @@ is_hidden = 0
 							<div class="uk-navbar-right">
 								<ul class="uk-navbar-nav">
 									<li>
-										<a class="check" style="color:black" href="#">Check availability</a>
+										<a class="check"  href="https://www.booking.com/hotel/vn/under-the-coconut-tree" target="blank">Check availability</a>
 
 									</li>
 								</ul>
@@ -102,7 +102,7 @@ is_hidden = 0
 							<div class="uk-navbar-right">
 								<ul class="uk-navbar-nav">
 									<li>
-										<a style="color:black" href="#">Check availability</a>
+										<a class="check" href="https://www.booking.com/hotel/vn/under-the-coconut-tree" target="blank">Check availability</a>
 
 									</li>
 								</ul>
@@ -142,7 +142,7 @@ is_hidden = 0
 							<div class="uk-navbar-right">
 								<ul class="uk-navbar-nav">
 									<li>
-										<a style="color:black" href="#">Check availability</a>
+										<a class="check" href="https://www.booking.com/hotel/vn/under-the-coconut-tree" target="blank">Check availability</a>
 
 									</li>
 								</ul>
@@ -184,7 +184,7 @@ is_hidden = 0
 							<div class="uk-navbar-right">
 								<ul class="uk-navbar-nav">
 									<li>
-										<a style="color:black" href="#">Check availability</a>
+										<a class="check" href="https://www.booking.com/hotel/vn/under-the-coconut-tree" target="blank">Check availability</a>
 
 									</li>
 								</ul>
@@ -223,7 +223,7 @@ is_hidden = 0
 							<div class="uk-navbar-right">
 								<ul class="uk-navbar-nav">
 									<li>
-										<a class="check" style="color:black" href="#">Check availability</a>
+										<a class="check" href="https://www.booking.com/hotel/vn/under-the-coconut-tree" target="blank">Check availability</a>
 
 									</li>
 								</ul>
