--- a/themes/tree/pages/home.htm
+++ b/themes/tree/pages/home.htm
@@ -40,7 +40,7 @@ is_hidden = 0
 
 <!-- reviews -->
 
-<div class="uk-container uk-width-1-1 uk-padding" style="background-color:  #79BEDB" >
+<div class="reviews uk-container uk-width-1-1 uk-padding" style="background-color:  #79BEDB" >
     <h2 class="uk-margin-top uk-heading uk-text-center uk-padding-top" style="color: white">Love from our Guests</h2>
     <div uk-slider="autoplay:true">
         <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
@@ -62,8 +62,8 @@ is_hidden = 0
                             <img data-src="./storage/app/media/meatball.jpg" uk-img alt="">
                         </div>
                         <div class="uk-flex-first@m">
-                            <p style="color: white;">"Great, cozy place with the friendliest and most helpful staff ever!!! Good food, nice bamboo cottages furnished and decorated in traditional hoi an like style. Beach is just in a 3-min walk from the hotel"</p>
-                            <p class="uk-text-small">papuacompl wrote on TripAdvisor</p>
+                            <p style="color: white;">"Stayed one night in between travelling from Hoi An & Da Nang ...beautiful accommodation on the beach & very well run home stay , gorgeous traditional room in fabulous food , all for £6 a night including breakfast ...highly recommend"</p>
+                            <p class="uk-text-small">Helenm091 wrote on TripAdvisor</p>
                         </div>
                     </div>
                 </li>
