--- a/themes/tree/pages/dining.htm
+++ b/themes/tree/pages/dining.htm
@@ -61,17 +61,9 @@ is_hidden = 0
 
 <!-- dining images second sec-->
 
-<div class="dining-sec dining-sec-2 uk-grid-small uk-width-1-1 uk-child-width-1-3@s uk-flex uk-padding uk-margin-small-bottom" uk-grid >
+<div class="dining-sec dining-sec-2 uk-grid-small uk-width-1-1 uk-child-width-1-3@s uk-flex uk-padding uk-margin-small-bottom uk-hidden@s" uk-grid >
 	<div class="uk-visible@s" style="">
-		<div class="uk-flex uk-flex-middle uk-margin-small-bottom">
-			  <img class="" data-src="./storage/app/media/food-6.jpg" uk-img alt="">
-		</div>
-		<div class="uk-flex uk-flex-middle uk-margin-small-bottom">
-			  <img class="uk-width-1-1" data-src="./storage/app/media/food-5.jpg" uk-img alt="">
-		</div>
-		<div class="uk-flex uk-flex-middle uk-margin-small-bottom">
-			  <img class="uk-width-1-1" data-src="./storage/app/media/food-4.jpg" uk-img alt="">
-		</div>
+		
 	</div>
 
 	<div class=" uk-width-2-3@s">
@@ -80,11 +72,11 @@ is_hidden = 0
 		    	<h3>Chill in the Beautiful Vibes</h3>
 		    </div>
 			<div class="uk-flex uk-flex-middle ">
-			  <img class="uk-width-1-1" data-src="./storage/app/media/food-3.jpg" uk-img alt="">
+			  <img class="uk-width-1-1" data-src="./storage/app/media/food-8.jpg" uk-img alt="">
 		    </div>
 		</div>
 		<div class="uk-flex uk-flex-middle ">
-			<img class="uk-width-1-1" data-src="./storage/app/media/food-7.jpg" uk-img alt="">
+			<img class="uk-width-1-1" data-src="./storage/app/media/food-9.jpg" uk-img alt="">
 		</div>
 	</div>
 
